--- a/frontend/index.html
+++ b/frontend/index.html
@@ -186,7 +186,8 @@
                         class="material-icons right">get_app</i>Download</a>
                     <br/>
                     <br>
-                    <a class="waves-effect waves-light btn-large" target="_blank" id="image_open"><i class="material-icons right">open_in_new</i>Open</a>
+                    <a class="waves-effect waves-light btn-large" target="_blank" id="image_open"><i
+                        class="material-icons right">open_in_new</i>Open</a>
                 </div>
             </div>
         </div>
@@ -197,28 +198,30 @@
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">About</h5>
-                    <p class="grey-text text-lighten-4">This was completely inspired by u/taammon on Reddit. Thank you buddy!</p>
+                    <p class="grey-text text-lighten-4">This was completely inspired by u/taammon on Reddit. Thank you buddy!
+                    </p>
                 </div>
                 <div class="col l6 s12">
                     <h5 class="white-text">Data Sources</h5>
                     <ul>
                         <li><a class="white-text" href="https://covermytunes.com" target="_blank">Album Covers</a></li>
                         <li><a class="white-text" href="https://genius.com" target="_blank">Lyrics on Genius</a></li>
-                        <li><a class="white-text" href="https://lyrics.wikia.com" target="_blank">Lyrics on LyricsWikia</a></li>
+                        <li><a class="white-text" href="https://lyrics.wikia.com" target="_blank">Lyrics on LyricsWikia</a>
+                        </li>
                         <li><a class="white-text" href="https://pixabay.com/" target="_blank">Images</a></li>
                     </ul>
                 </div>
                 <!--
-            <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-            -->
+        <div class="col l3 s12">
+            <h5 class="white-text">Connect</h5>
+            <ul>
+                <li><a class="white-text" href="#!">Link 1</a></li>
+                <li><a class="white-text" href="#!">Link 2</a></li>
+                <li><a class="white-text" href="#!">Link 3</a></li>
+                <li><a class="white-text" href="#!">Link 4</a></li>
+            </ul>
+        </div>
+        -->
             </div>
         </div>
         <div class="footer-copyright">
@@ -233,16 +236,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="js/init.js"></script>
 
+    <script>
+        if (!location.href.endsWith("/")) {
+            window.location = location.href + "/"
+        }
+    </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127069816-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
 
-            gtag('config', 'UA-127069816-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-127069816-1');
     </script>
-
 
 </body>
 
