--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 <body>
 <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="javascript:void(1)" class="brand-logo">ArtistWordRanker</a>
+        <a id="logo-container" href="javascript:location.reload()" class="brand-logo">ArtistWordRanker</a>
         <ul class="right hide-on-med-and-down">
             <li><a href="https://github.com/tooxo/ArtistWordRanker" target="_blank">GitHub</a></li>
         </ul>
@@ -131,7 +131,8 @@
             <h5>or</h5></center>
         <br>
         <center><a class="waves-effect waves-light btn-large fileUpload" onclick="fileUpload()">Upload your own file</a>
-        <a class="waves-effect waves-light btn-large" onclick="fileClear()" style="display: none" id="clearButton">X</a>
+            <a class="waves-effect waves-light btn-large" onclick="fileClear()" style="display: none"
+               id="clearButton">X</a>
         </center>
         <input style="display: none" id="fileInput" type="file" onchange="fileChanged()">
         <br>
@@ -193,9 +194,11 @@
             </div>
             <div class="col s6">
                 <div class="row">
-                    <div class="col s6"><a class="waves-effect waves-light btn-large" id="vector_download" target="_blank"><i
+                    <div class="col s6"><a class="waves-effect waves-light btn-large" id="vector_download"
+                                           target="_blank"><i
                             class="material-icons right">get_app</i>SVG DOWNLOAD</a></div>
-                    <div class="col s6"><a class="waves-effect waves-light btn-large" id="image_download" target="_blank"><i
+                    <div class="col s6"><a class="waves-effect waves-light btn-large" id="image_download"
+                                           target="_blank"><i
                             class="material-icons right">get_app</i>PNG DOWNLOAD</a></div>
                 </div>
                 <a class="waves-effect waves-light btn-large" target="_blank" id="image_open"><i
